fixed header padding appearing on mobile

--- a/public/less/chat-content.less
+++ b/public/less/chat-content.less
@@ -2,10 +2,6 @@
 .chat-container {
   .trpBodyMedium;
 
-  & > div:first-child { padding-top: 72px; }
-
-  body.embedded & > div:first-child { padding-top: 0; }
-
   &-invited {
 
     position: relative;
